Vinculación bs en index y actividades. Carrusel

--- a/cerro.html
+++ b/cerro.html
@@ -12,12 +12,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="body">
     <header class="header">  
         <div class="header__contenedor">  
             <div class="header__titulo"> 
-                <h1>La casa en el aire</h1>
-                <h2>Entregate a volar</h2>
+                <h1 class="h1">La casa en el aire</h1>
+                <h2 class="h2">Entregate a volar</h2>
             </div>
     
             <nav class="nav">
@@ -58,7 +58,7 @@
     </section>
 
     <section>
-        <h2  class=subtituloCentrado>Visita Virtual. Conocé el cerro.</h2>
+        <h2  class="h2 subtituloCentrado">Visita Virtual. Conocé el cerro.</h2>
         <iframe class="visitaVirtual" src="https://www.google.com/maps/embed?pb=!4v1645455411855!6m8!1m7!1sCAoSLEFGMVFpcE5GT3Z4clJuLWpmT2VEZVJwOWh1SHFBU1gwQVZPY1hOM2ZkVFBf!2m2!1d5.845294!2d-75.495505!3f89.04326750047358!4f9.604704780695215!5f0.42322374648317934" 
         style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </section>
