--- a/contacto.html
+++ b/contacto.html
@@ -14,12 +14,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="body">
     <header class="header">  
         <div class="header__contenedor">  
             <div class="header__titulo"> 
-                <h1>La casa en el aire</h1>
-                <h2>Entregate a volar</h2>
+                <h1 class="h1">La casa en el aire</h1>
+                <h2 class="h2">Entregate a volar</h2>
             </div>
     
             <nav class="nav">
@@ -41,7 +41,7 @@
 <main>
     <section class="cajaContacto" >
         <form action="" >
-            <h2 class="subtituloCentrado tituloClaro sinNegrita">Estamos para ayudarte. Tu consulta no molesta</h2>
+            <h2 class="h2 subtituloCentrado tituloClaro sinNegrita">Estamos para ayudarte. Tu consulta no molesta</h2>
     
             <div class="formulario parrafoCajaNosotros">
                 <label for="nombre">Nombre:</label>
@@ -94,7 +94,7 @@
         </div>
 
         <div>
-            <h2 class="subtituloCentrado">¿Como llegar?</h2>
+            <h2 class="h2 subtituloCentrado">¿Como llegar?</h2>
             <p class="parrafoInfo">Desde Medellín en bus:
                 Terminal del Norte- Taquilla 5 ( SONAR)- El bus sale todos los días a las 8:30 am. Duración del recorrido 3 horas.
                 Es importante resaltar que es el bus que se dirige a Abejorral por la ruta a anta Bárbara; el tiquete se compra hasta la vereda La Peña. Indicarle al conductor que lo deje en la “tienda la 80” de la vereda la Peña, allí los espera el guía. Regreso a Medellín: 11:30 am.
