--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - La casa en el aire</title>
-    <link rel="stylesheet" href="Css/estilo.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oooh+Baby&display=swap" rel="stylesheet">
@@ -14,19 +15,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Cabin+Sketch&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;600&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="Css/estilo.css">
 </head>
 
-<body>  
+<body class="body">  
 <header class="header">  
     <div class="header__contenedor">  
         <div class="header__titulo"> 
-            <h1>La casa en el aire</h1>
-            <h2>Entregate a volar</h2>
+            <h1 class="h1">La casa en el aire</h1>
+            <h2 class="h2">Entregate a volar</h2>
         </div>
 
         <nav class="nav">
-            
-            <a class="botonHamburguesa" href="#menuLista"><i class="icono fa-solid fa-bars fa-2x"></i></a>
+            <a class="botonHamburguesa" href="#menuLista"><i class="icono fa-solid fa-bars"></i></a>
             
             <ul class="nav__lista" id="menuLista">
                 <li><a class="nav__enlace" href="./index.html">Home</a></li>
@@ -87,5 +88,7 @@
 </footer>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>AOS.init();</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
+integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
