--- a/nosotros.html
+++ b/nosotros.html
@@ -15,12 +15,12 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="body">
     <header class="header">  
         <div class="header__contenedor">  
             <div class="header__titulo"> 
-                <h1>La casa en el aire</h1>
-                <h2>Entregate a volar</h2>
+                <h1 class="h1">La casa en el aire</h1>
+                <h2 class="h2">Entregate a volar</h2>
             </div>
     
             <nav class="nav">
