--- a/practicas/xxx.html
+++ b/practicas/xxx.html
@@ -72,3 +72,49 @@ Segunda pagina Cerro
     <p> Decidimos rodar por la pendiente.</p> 
     <p>Carlos Alberto Valle</p>
 </div>
+
+
+
+    <section class="container">
+        <div class="raw">
+            <div class="col-12"></div></div>
+    
+    </section>
+        
+    <section>
+        <p class="caja2index__p" >
+        Particular y única construcción en madera, colgada a 20 metros de altura en 
+        las paredes de granito del Cerro San Vicente. El  acceso es escalando o por cables. 
+        Tiene una capacidad para 10 personas, cómodas.
+        Cuenta con cocina dotada, baño y dos pisos para acomodación compartida.
+        </p>
+    </section>
+
+    <section class="caja3index">
+        <div class="caja3index__contenedorimg" data-aos="fade-right" data-aos-offset="400"
+        data-aos-easing="ease-in-sine">
+            <img class="caja3index__img" src="./images/reemplazo.jpg" alt="15">
+        </div>
+ 
+        <iframe class="iframeIndex" data-aos="fade-left" src="https://www.youtube.com/embed/eDDdL6V4I5g" title="YouTube video player" frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen data-aos-offset="400"
+            data-aos-easing="ease-in-sine">
+        </iframe>   
+    </section>  
+<section class="container">
+    <div class="raw">
+        <div class="col-12 col-6">
+            <img class="caja3index__img" src="./images/reemplazo.jpg" alt="15">
+        </div>
+        <div class="col-12 col-6">
+            <iframe class="iframeIndex" data-aos="fade-left" src="https://www.youtube.com/embed/eDDdL6V4I5g" title="YouTube video player" frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen data-aos-offset="400"
+            data-aos-easing="ease-in-sine">
+        </iframe>
+        </div>
+    </div>
+
+</section>
+
