--- a/actividades.html
+++ b/actividades.html
@@ -87,7 +87,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 col-md-2"></div>
-                <div class="col-md-8">
+                <div class="col-md-8 col-offset-md-2">
                     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active altura">
