BS en todas las paginas de master

--- a/cerro.html
+++ b/cerro.html
@@ -47,7 +47,7 @@
     data-aos-easing="ease-out-cubic"
     data-aos-duration="2000">
         <div class="row sinMargin color rounded-3">
-            <div class="col-12 cajaImgNosotros rounded">
+            <div class="col-12 cajaImgCerro2 rounded">
                 <img class="imgSectionCerro" src="./images/12.jpg" alt="12">
             </div>
             
