Entrega bs, limpieza css

--- a/cerro.html
+++ b/cerro.html
@@ -78,21 +78,22 @@
 </main>
 
 <footer class="footer">
-    <div class="footer__contenedor">
-        <p class="footer__p"> 
-            Copyright Evelin Gómez
-            Desarrollo Web</p>
-    </div> 
-    <div> 
-        <ul class="footer__lista">
-            <li><a target="_blanck" href="https://www.facebook.com/AeroHostal">
-                <i class="fa-brands fa-facebook-square fa-3x" style="color: bisque;" ></i></a></li>
-            <li><a target="_blank" href="https://www.instagram.com/lacasa_enelaire/">
-                <i class="fa-brands fa-instagram fa-3x" style="color: bisque;"></i> </a></li> 
-            <li><a href="./contacto.html">
-                <i class="fa-solid fa-envelope fa-3x" style="color: bisque;"></i></a></li>
-        </ul>
-    </div>
+    <div class="footer__contenedor">  
+        <div> 
+            <p class="footer__p"> Copyright Evelin Gómez - Desarrollo Web</p>
+        </div>
+            
+        <div class="nav">
+            <ul class="footer__lista">
+                <li><a target="_blanck" href="https://www.facebook.com/AeroHostal">
+                        <i class="fa-brands fa-facebook-square fa-3x tamañoReducidoI" style="color: bisque;" ></i></a></li>
+                <li><a target="_blank" href="https://www.instagram.com/lacasa_enelaire/">
+                        <i class="fa-brands fa-instagram fa-3x tamañoReducidoI" style="color: bisque;"></i> </a></li> 
+                <li><a href="./contacto.html">
+                        <i class="fa-solid fa-envelope fa-3x tamañoReducidoI" style="color: bisque;"></i></a></li>
+            </ul> 
+        </div>
+    </div>     
 </footer>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>AOS.init();</script>
