Index y Actividades 100% responsive

--- a/nosotros.html
+++ b/nosotros.html
@@ -82,7 +82,7 @@
         </div>  
     </section>
     
-    <section class="container sinPadding" data-aos="zoom-in-up" data-aos-offset="400">
+    <section class="container sinPadding" ata-aos="zoom-in-up" ata-aos-offset="400">
         <div class="row sinMargin color rounded-3">
             <div class="col-xl-6 parrafoCajaNosotros tamañoLetra">
                 <div>
