Responsive terminado en todas las paginas menos nosotros

--- a/actividades.html
+++ b/actividades.html
@@ -82,6 +82,99 @@
     </section>
 
     <section>
+        <div><h2 class="h2 subtituloCentrado">Paquetes</h2></div>
+        <div class="container margenAbajo">
+            <div class="row ">
+                <div class="col-12  ">
+                    <div class="accordion " id="accordionPanelsStayOpenExample">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header acordion__encabezado" id="panelsStayOpen-headingOne">
+                            <button class="accordion-button acordion__h2" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                            Salida Familiar
+                            </button>
+                            </h2>
+                            <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show acordion__caja" 
+                                aria-labelledby="panelsStayOpen-headingOne">
+                                <div class="accordion-body acordion__p">
+                                    <strong>Pack para 2 adultos y 2 menores</strong> 
+                                    Veni a pasar un diferente e inolvidable con toda la familia. Hacer actividad física, deporte aventura, merendar en el aire y disfrutar de conectarse con la naturaleza son algunas de las cosas que van a disfrutar juntos! Sorprendé con este regalo.
+                                    <span class="acordion__span">Incluye: Entrada para los 4, acceso a una actividad a 
+                                    elección y 2 hs para merendar en la red en el aire.</span>
+                            
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="accordion-item acordion">
+                            <h2 class="accordion-header acordion__encabezado" id="panelsStayOpen-headingOne">
+                            <button class="accordion-button acordion__h2" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                            Escapada Romántica
+                            </button>
+                            </h2>
+                            <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show acordion__caja" 
+                                aria-labelledby="panelsStayOpen-headingOne">
+                                <div class="accordion-body acordion__p">
+                                <strong>Vení a vivir una experiencia única con tu pareja.</strong>  Un día a pura aventura y diversión. 
+                                    Y a la noche la exclusividad de la casa para que disfrutes con esa persona especial la noche estrellada. Incluye un brindis con picada.
+                               </div>
+                            </div>
+                        </div>
+
+                        <div class="accordion-item">
+                            <h2 class="accordion-header acordion__encabezado" id="panelsStayOpen-headingOne">
+                            <button class="accordion-button acordion__h2" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                            Para la Banda
+                            </button>
+                            </h2>
+                            <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show acordion__caja" 
+                                aria-labelledby="panelsStayOpen-headingOne">
+                                <div class="accordion-body acordion__p">
+                                <strong>Veni a disfrutar con tdos tus amigos</strong> 
+                                Podes elegir entra pack para 4/5/6 personas. 
+                                Vení a hacer algo diferente, tenemos preparados un dia de juegos y actividades para ni parar de reirse.
+                                Y para coronar la tarde una picadita con vino patero para disfrutar el atardecer.
+                             
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header acordion__encabezado" id="panelsStayOpen-headingOne">
+                            <button class="accordion-button acordion__h2" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                            Combo Family Day
+                            </button>
+                            </h2>
+                            <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show acordion__caja" 
+                                aria-labelledby="panelsStayOpen-headingOne">
+                                <div class="accordion-body acordion__p">
+                                <strong>Venite con toda la familia!</strong> 
+                               Esta promo esta especialmente para que vengan diferentes matrimonios con hijos. La idea es que todos puedan disfrutar el dia. 
+                               Tenemos juegos preparados para los mas chicos y actitidades variadas para los adultos en conjunto. Una tarde para disfrutar al máximo.
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="accordion-item">
+                            <h2 class="accordion-header acordion__encabezado" id="panelsStayOpen-headingOne">
+                            <button class="accordion-button acordion__h2" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                            Entregate a volar
+                            </button>
+                            </h2>
+                            <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show acordion__caja" 
+                                aria-labelledby="panelsStayOpen-headingOne">
+                                <div class="accordion-body acordion__p">
+                                <strong>Una semana en el aire</strong> 
+                                La semana en el aire, te ofrece hospedaje pero además una semana de experiencia profunda y espiritual. Hay actividades de introspeccion, meditaciones, retiros de silencio. No es solo una estadía, es un viaje interior mucho mayor. 
+                                También se realizan actividades como aprender a hacer compost, ceramica y mermeladas.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
         <h2 class="h2 subtituloCentrado">Galería</h2>
         <div class="container marginB">
             <div class="row">
@@ -126,6 +219,8 @@
             </div>
         </div>
     </section>
+
+
 </main>
 
 <footer class="footer">
