--- a/cerro.html
+++ b/cerro.html
@@ -43,7 +43,7 @@
             <img class="cerro__img" src="./images/cerrogrande.jpg" alt="cerrogrande">
     </section>
 
-    <section class="container sinPadding" data-aos="flip-left"
+    <section class="container sinPadding margenAbajo" data-aos="flip-left"
     data-aos-easing="ease-out-cubic"
     data-aos-duration="2000">
         <div class="row sinMargin color rounded-3">
@@ -65,14 +65,19 @@
     </section>
 
     <section>
-    <div class="cajaIframe">
-        <h2  class="h2 subtituloCentrado">Visita Virtual. Conocé el cerro.</h2>
-        <div class="cajaVisitaVirtual">
-            <iframe class="visitaVirtual" src="https://www.google.com/maps/embed?pb=!4v1645455411855!6m8!1m7!1sCAoSLEFGMVFpcE5GT3Z4clJuLWpmT2VEZVJwOWh1SHFBU1gwQVZPY1hOM2ZkVFBf!2m2!1d5.845294!2d-75.495505!3f89.04326750047358!4f9.604704780695215!5f0.42322374648317934" 
-            style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="">
+                        <h2  class="h2 subtituloCentrado">Visita Virtual. Conocé el cerro.</h2>
+                        <div class="">
+                            <iframe class="visitaVirtual" src="https://www.google.com/maps/embed?pb=!4v1645455411855!6m8!1m7!1sCAoSLEFGMVFpcE5GT3Z4clJuLWpmT2VEZVJwOWh1SHFBU1gwQVZPY1hOM2ZkVFBf!2m2!1d5.845294!2d-75.495505!3f89.04326750047358!4f9.604704780695215!5f0.42322374648317934" 
+                                style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
-        
     </section>
     
 </main>
