--- a/practicas/xxx.html
+++ b/practicas/xxx.html
@@ -185,3 +185,133 @@ Segunda pagina Cerro
         </section>
       </div>
 </section>
+
+<section> 
+
+    <div class="conainer margintop"> 
+
+        <div class="row"> 
+
+            <div class="col-sm-6 col-lg-4 mb-4"> 
+
+                <div class="card card__altura"> 
+
+                 <div class="card__cajaImg"> 
+
+                    <img class="card__img" src="./images/hamacas cuadrada.jpg" alt=""> 
+
+                 </div> 
+
+                  <div class="card-body card__cajaP"> 
+
+                    <h3 class="card-title card__h3">Filosofía</h3> 
+
+                    <p class="card-text card__p">La característica central es "ser muy amigable con el medio ambiente". 
+
+                        Utilizamos 100% de energía solar, agua de una cascada cercana y llevamos toda la basura generada  
+
+                        a la ciudad de Medellín. 
+
+                        Esta construida en madera y con techo de chapa, sobre el que se extienden los paneles solares. 
+
+                        Para llegar se debe recorrer a pie un sendero natural, rodeado de cerros, en una zona de gran biodiversidad e  
+
+                        impactantes paisajes.  
+
+                        Para los más valientes el último tramo solo se puede hacer en tirolesa.</p> 
+
+                    </div> 
+
+                </div> 
+
+            </div> 
+
+            <div class="col-sm-6 col-lg-4 mb-4"> 
+
+                <div class="card card__altura"> 
+
+                    <div class="card__cajaImg"> 
+
+                        <img class="card__img" src="./images/11.jpg" alt=""> 
+
+                    </div> 
+                    
+                    <div class="card-body card__cajaP"> 
+
+                        <h3 class="card-title card__h3">Alojamiento</h3> 
+
+                        <ul class="card__p sinMargin"> 
+
+                            <li>Plan de acomodación múltiple, incluye un guía que los acompaña desde el inicio de su estadía y póliza.</li> 
+
+                            <li>Plan Romántico: Incluye la exclusividad de la casa es durante la noche, durante el día se comparte la casa  
+
+                                con las personas del día de sol o de la zona de camping que vallan a realizar cualquiera de las actividades.</li> 
+
+                            <li>Zona de camping: Capacidad para 8 personas. Ubicadas en carpas para 2 personas, la zona cuenta con cocina  
+
+                            dotada, baño, ducha, chimenea, acceso a la casa durante el día, tarjeta de asistencia.</li> 
+
+                        </ul> 
+
+                    </div> 
+
+                </div> 
+
+            </div> 
+
+            <div class="col-sm-6 col-lg-4 mb-4"> 
+
+                <div class="card card__altura"> 
+
+                    <div class="card__cajaImg"> 
+
+                        <img class="card__img card__img--altura" src="./images/13.jpg" alt=""> 
+
+                    </div> 
+
+           
+
+                    <div class="card-body card__cajaP"> 
+
+                        <h3 class="card-title card__h3">Recomendaciones</h3> 
+
+                        <ul class="card__p sinMargin"> 
+
+                            <li class="card__li">Llevar comida.</li> 
+
+                            <li class="card__li">Una bolsa de agua de 5 litros por cada dos personas.</li> 
+
+                            <li class="card__li">Bloqueador solar y repelente.</li> 
+
+                            <li class="card__li">Pantalón y camisa manga larga.</li> 
+
+                            <li class="card__li">Ropa de cambio.</li> 
+
+                            <li class="card__li">Zapatos Cómodos.</li> 
+
+                            <li class="card__li">Toalla.</li> 
+
+                            <li class="card__li">Sábanas</li> 
+
+                            <li class="card__li">Aseo personal</li> 
+
+                        </ul> 
+
+                        <p class="card-text card__p">OBSERVACIONES: Para reservar completar el formulario de la  
+
+                            página <a class="enlaceParrafo" href="./contacto.html">contacto</a> 
+
+                        </p> 
+
+                    </div> 
+
+                </div> 
+
+            </div> 
+
+        </div> 
+
+    </div> 
+
+</section> 
