--- a/cerro.html
+++ b/cerro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cerro</title>
+    <title>Cerro San Vicente - La casa en el Aire</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Oooh+Baby&display=swap" rel="stylesheet">
@@ -12,6 +12,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Cabin+Sketch&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;600&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <meta name="description" content="La casa en el aire es un alojamiento y una serie de actividades que se convierten en 
+    una experiencia única e incomparable donde predomina la aventura, la adrenalina y la naturaleza es su mayor espledor.">
+    <meta name="keywords" content="Casa, aire, colombia, aventura, experiencia, cerro, vicente, visita, naturaleza">
+    <link rel="shortcut icon" href="./images/11.png">
     <link rel="stylesheet" href="Css/estilo.css">
 </head>
 
