entrega del SEO y SCSS II terminada

--- a/cerro.html
+++ b/cerro.html
@@ -12,9 +12,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Cabin+Sketch&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;600&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <meta name="description" content="La casa en el aire es un alojamiento y una serie de actividades que se convierten en 
-    una experiencia única e incomparable donde predomina la aventura, la adrenalina y la naturaleza es su mayor espledor.">
-    <meta name="keywords" content="Casa, aire, colombia, aventura, experiencia, cerro, vicente, visita, naturaleza">
+    <meta name="description" content="La casa en el aire es un hostal colgado en la mitad de unas gigantescas rocas 
+    de escalada a mas de 20m de altura, ubicada en el Cerro San Vicente - Colombia. El cerro San Vicente es un mirador 
+    natural ubicado a 15 kilómetros de la zona urbana de Abejorral. Permite diversas actividades en la altura">
+    <meta name="keywords" content="Casa, aire, colombia, Abejorral, aventura, experiencia, cerro, vicente, visita, naturaleza">
     <link rel="shortcut icon" href="./images/11.png">
     <link rel="stylesheet" href="Css/estilo.css">
 </head>
@@ -44,15 +45,13 @@
     </header>
 <main>
     <section class="cerro__contenedorimg  margenAbajo">
-            <img class="cerro__img" src="./images/cerrogrande.jpg" alt="cerrogrande">
+            <img class="cerro__img" src="./images/cerrogrande.jpg" alt="BannercerroSanVicente">
     </section>
 
-    <section class="container sinPadding margenAbajo" data-aos="flip-left"
-    data-aos-easing="ease-out-cubic"
-    data-aos-duration="2000">
+    <section class="container sinPadding margenAbajo" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
         <div class="row sinMargin color rounded-3">
             <div class="col-12 cajaImgCerro2 rounded">
-                <img class="imgSectionCerro" src="./images/12.jpg" alt="12">
+                <img class="imgSectionCerro" src="./images/12.jpg" alt="CerroSanvicentechico">
             </div>
             
             <div class="col-12 parrafoCajaNosotros">
