--- a/contacto.html
+++ b/contacto.html
@@ -14,9 +14,11 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <meta name="description" content="La casa en el aire es un alojamiento y una serie de actividades que se convierten en 
-    una experiencia única e incomparable donde predomina la aventura, la adrenalina y la naturaleza es su mayor espledor.">
-    <meta name="keywords" content="Casa, aire, colombia, aventura, experiencia, coversemos, contacto, mapa">
+    <meta name="description" content="La casa en el aire es un hostal colgado en la mitad de unas gigantescas rocas 
+    de escalada a mas de 20m de altura, ubicada en el Cerro San Vicente - Colombia. Proponemos diversos paquetes acompañados
+    de actividades como hamacas y meriendas en el aire, trekking y escalada, entre otras. Contáctanos para sacarte todas 
+    las dudas que tengas sobre nuestras propuestas, el camino para llegar y la filosofía del aero hostal.">
+    <meta name="keywords" content="Casa, aire, hostal, colombia, aventura, experiencia, coversemos, contacto, mapa, llegar">
     <link rel="shortcut icon" href="./images/11.png">
     <link rel="stylesheet" href="Css/estilo.css">
 </head>
@@ -130,10 +132,6 @@
             </div>
         </div>
     </section>
-
-    
-
-   
 </main>
 
 <footer class="footer">
