Margintop en subtitulos pag nosotros

--- a/nosotros.html
+++ b/nosotros.html
@@ -88,7 +88,7 @@
     <section class="container margintop" data-aos="zoom-in" data-aos-offset="400">
         <div class="row sinMargin color rounded-3 ">
             <div class="col-xl-6 parrafoCajaNosotros tamañoLetra">
-                <h1 class="subtituloCentrado">Origen y valores</h1>
+                <h1 class="subtituloCentrado marginT">Origen y valores</h1>
                 <p>Su dueño y creador, él escalador Nilton López, cumplió un viejo sueño con la construcción de 
                     este hospedaje, la característica central es "ser muy amigable con el medio ambiente".
                     Utilizamos 100% de energía solar, agua de una cascada cercana y llevamos toda la basura generada 
@@ -136,7 +136,7 @@
         <div class="row sinMargin color rounded-3 margenAbajo sinPadding">
             <div class="col-xl-6 parrafoCajaNosotros tamañoLetra ">
                 <div>
-                    <h2 class="subtituloCentrado">Recomendaciones</h2>
+                    <h2 class="subtituloCentrado marginT">Recomendaciones</h2>
                     <ul class="parrafoCajaNosotros sinPadding recomendaciones__p">
                         <li>Llevar comida.</li>
                         <li>Una bolsa de agua de 5 litros por cada dos personas.</li>
