--- a/actividades.html
+++ b/actividades.html
@@ -89,104 +89,100 @@
 
     <section>
         <div><h2 class="h2 subtituloCentrado marginB">Paquetes</h2></div>
-        <div class="container margenAbajo">
-            <div class="row ">
-                <div class="col-12  ">
-                    <div class="accordion " id="accordionPanelsStayOpenExample">
-                        <div class="accordion-item">
-                            <h2 class="accordion-header acordion__encabezado" id="panelsStayOpen-headingOne">
-                                <button class="accordion-button acordion__h2" type="button" data-bs-toggle="collapse" data-bs-target=
-                                "#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-                                Salida Familiar</button>
-                            </h2>
-                            <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show acordion__caja" 
-                                aria-labelledby="panelsStayOpen-headingOne">
-                                <div class="accordion-body acordion__p">
-                                    <strong>Pack para 2 adultos y 2 menores.</strong>
-                                    <p> Veni a pasar un momento diferente e inolvidable con toda la familia. Hacer actividad física, deporte aventura, merendar en el 
+            <div class="container margenAbajo">
+                <div class="row ">
+                    <div class="col-12  ">
+                        <div id="accordionPanelsStayOpenExample">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header acordion__encabezado" id="panelsStayOpen-headingOne">
+                                    <button class="accordion-button acordion__h2" type="button" data-bs-toggle="collapse" data-bs-target=
+                                    "#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                                    Salida Familiar</button>
+                                </h2>
+                                <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show acordion__caja" aria-labelledby="panelsStayOpen-headingOne">
+                                    <div class="accordion-body acordion__p">
+                                        <strong>Pack para 2 adultos y 2 menores.</strong>
+                                        <p> Veni a pasar un momento diferente e inolvidable con toda la familia. Hacer actividad física, deporte aventura, merendar en el 
                                         aire y disfrutar de conectarse con la naturaleza son algunas de las cosas que van a disfrutar juntos! 
                                         Sorprendé con este regalo.
                                         <span class="acordion__span">Incluye: Entrada para los 4, acceso a una actividad a 
                                         elección y 2 hs para merendar en la red en el aire.</span>
-                                    </p>
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
 
-                        <div class="accordion-item acordion">
-                            <h2 class="accordion-header acordion__encabezado" id="panelsStayOpen-headingOne">
-                                <button class="accordion-button acordion__h2" type="button" data-bs-toggle="collapse" data-bs-target=
-                                "#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-                                Escapada Romántica</button>
-                            </h2>
-                            <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show acordion__caja" 
-                                aria-labelledby="panelsStayOpen-headingOne">
-                                <div class="accordion-body acordion__p">
-                                <strong>Encuentro íntimo con tu pareja.</strong>
-                                <p>Un día a pura aventura y diversión, tenemos mucas actividades para que compartan juntos. 
-                                Y a la noche la exclusividad de la casa para que disfrutes con esa persona especial la 
-                                noche estrellada. Incluye un brindis con picada.</p> 
-                               </div>
-                            </div>
-                        </div>
-
-                        <div class="accordion-item">
-                            <h2 class="accordion-header acordion__encabezado" id="panelsStayOpen-headingOne">
-                                <button class="accordion-button acordion__h2" type="button" data-bs-toggle="collapse" data-bs-target=
-                                "#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-                                Para la Banda!</button>
-                            </h2>
-                            <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show acordion__caja" 
-                                aria-labelledby="panelsStayOpen-headingOne">
-                                <div class="accordion-body acordion__p">
-                                <strong>Podes elegir entre packs para 4/5 o 6 personas.</strong>
-                                <p>Vení a disfrutar con todos tus amigos un día diferente, tenemos preparados un dia de juegos y actividades para no 
-                                parar de reirse. Y para coronar la tarde una picadita con cerveza artesanal para disfrutar el atardecer.
-                                </p> 
+                            <div class="accordion-item acordion">
+                                <h2 class="accordion-header acordion__encabezado" id="panelsStayOpen-headingOne">
+                                    <button class="accordion-button acordion__h2" type="button" data-bs-toggle="collapse" data-bs-target=
+                                    "#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                                    Escapada Romántica</button>
+                                </h2>
+                                <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show acordion__caja" aria-labelledby="panelsStayOpen-headingOne">
+                                    <div class="accordion-body acordion__p">
+                                        <strong>Encuentro íntimo con tu pareja.</strong>
+                                        <p>Un día a pura aventura y diversión, tenemos mucas actividades para que compartan juntos. 
+                                        Y a la noche la exclusividad de la casa para que disfrutes con esa persona especial la 
+                                        noche estrellada. Incluye un brindis con picada.</p> 
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="accordion-item">
-                            <h2 class="accordion-header acordion__encabezado" id="panelsStayOpen-headingOne">
-                                <button class="accordion-button acordion__h2" type="button" data-bs-toggle="collapse" data-bs-target=
-                                "#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-                                Combo Family Day</button>
-                            </h2>
-                            <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show acordion__caja" 
-                                aria-labelledby="panelsStayOpen-headingOne">
-                                <div class="accordion-body acordion__p">
-                                <strong>Venite con toda la familia!</strong>
-                                <p>Esta promo esta especialmente para que vengan diferentes matrimonios con hijos. La idea
-                                es que todos puedan disfrutar el dia. Tenemos juegos preparados para los mas chicos y 
-                                actitidades variadas para los adultos en conjunto. Una tarde para disfrutar al máximo.
-                                </p>
+
+                            <div class="accordion-item">
+                                <h2 class="accordion-header acordion__encabezado" id="panelsStayOpen-headingOne">
+                                    <button class="accordion-button acordion__h2" type="button" data-bs-toggle="collapse" data-bs-target=
+                                    "#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                                    Para la Banda!</button>
+                                </h2>
+                                <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show acordion__caja" aria-labelledby="panelsStayOpen-headingOne">
+                                    <div class="accordion-body acordion__p">
+                                        <strong>Podes elegir entre packs para 4/5 o 6 personas.</strong>
+                                        <p>Vení a disfrutar con todos tus amigos un día diferente, tenemos preparados un dia de juegos y actividades para no 
+                                        parar de reirse. Y para coronar la tarde una picadita con cerveza artesanal para disfrutar el atardecer.
+                                        </p> 
+                                    </div>
                                 </div>
                             </div>
-                        </div>
+                        
+                            <div class="accordion-item">
+                                <h2 class="accordion-header acordion__encabezado" id="panelsStayOpen-headingOne">
+                                    <button class="accordion-button acordion__h2" type="button" data-bs-toggle="collapse" data-bs-target=
+                                    "#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                                    Combo Family Day</button>
+                                </h2>
+                                <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show acordion__caja" aria-labelledby="panelsStayOpen-headingOne">
+                                    <div class="accordion-body acordion__p">
+                                        <strong>Venite con toda la familia!</strong>
+                                        <p>Esta promo esta especialmente para que vengan diferentes matrimonios con hijos. La idea
+                                        es que todos puedan disfrutar el dia. Tenemos juegos preparados para los mas chicos y 
+                                        actitidades variadas para los adultos en conjunto. Una tarde para disfrutar al máximo.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
 
-                        <div class="accordion-item">
-                            <h2 class="accordion-header acordion__encabezado" id="panelsStayOpen-headingOne">
-                                <button class="accordion-button acordion__h2" type="button" data-bs-toggle="collapse" data-bs-target=
-                                "#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-                                Entregate a volar</button>
-                            </h2>
-                            <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show acordion__caja" 
-                                aria-labelledby="panelsStayOpen-headingOne">
-                                <div class="accordion-body acordion__p">
-                                <strong>Una semana en el aire</strong> 
-                                <p>La semana en el aire, te ofrece hospedaje pero además una semana de experiencia profunda y 
-                                espiritual. Hay actividades de introspeccion, meditaciones, retiros de silencio. 
-                                No es solo una estadía, es un viaje interior mucho mayor. También se realizan actividades 
-                                como aprender a hacer compost,cerámica y mermeladas.
-                                </p> 
+                            <div class="accordion-item">
+                                <h2 class="accordion-header acordion__encabezado" id="panelsStayOpen-headingOne">
+                                    <button class="accordion-button acordion__h2" type="button" data-bs-toggle="collapse" data-bs-target=
+                                    "#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                                    Entregate a volar</button>
+                                </h2>
+                                <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show acordion__caja" aria-labelledby="panelsStayOpen-headingOne">
+                                    <div class="accordion-body acordion__p">
+                                        <strong>Una semana en el aire</strong> 
+                                        <p>La semana en el aire, te ofrece hospedaje pero además una semana de experiencia profunda y 
+                                        espiritual. Hay actividades de introspeccion, meditaciones, retiros de silencio. 
+                                        No es solo una estadía, es un viaje interior mucho mayor. También se realizan actividades 
+                                        como aprender a hacer compost,cerámica y mermeladas.
+                                        </p> 
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
     <section>
         <h2 class="h2 subtituloCentrado marginB">Galería</h2>
@@ -245,12 +241,9 @@
             
         <div class="nav">
             <ul class="footer__lista">
-                <li><a target="_blanck" href="https://www.facebook.com/AeroHostal">
-                        <i class="fa-brands fa-facebook-square fa-3x tamañoReducidoI" style="color: bisque;" ></i></a></li>
-                <li><a target="_blank" href="https://www.instagram.com/lacasa_enelaire/">
-                        <i class="fa-brands fa-instagram fa-3x tamañoReducidoI" style="color: bisque;"></i> </a></li> 
-                <li><a href="./contacto.html">
-                        <i class="fa-solid fa-envelope fa-3x tamañoReducidoI" style="color: bisque;"></i></a></li>
+                <li><a target="_blanck" href="https://www.facebook.com/AeroHostal"><i class="fa-brands fa-facebook-square fa-3x tamañoReducidoI" style="color: bisque;" ></i></a></li>
+                <li><a target="_blank" href="https://www.instagram.com/lacasa_enelaire/"><i class="fa-brands fa-instagram fa-3x tamañoReducidoI" style="color: bisque;"></i> </a></li> 
+                <li><a href="./contacto.html"><i class="fa-solid fa-envelope fa-3x tamañoReducidoI" style="color: bisque;"></i></a></li>
             </ul> 
         </div>
     </div>     
