Retoques en form, agregados de img en acordion y modificacion en tarjetas actividades

--- a/nosotros.html
+++ b/nosotros.html
@@ -93,9 +93,9 @@
                     este hospedaje, la característica central es "ser muy amigable con el medio ambiente".
                     Utilizamos 100% de energía solar, agua de una cascada cercana y llevamos toda la basura generada 
                     a la ciudad de Medellín.
-                    Esta construida en madera y con techo de chapa, sobre el que se extienden los paneles solares.
+                    <span class="menosTexto"> Esta construida en madera y con techo de chapa, sobre el que se extienden los paneles solares.
                     Para llegar se debe recorrer a pie un sendero natural, rodeado de cerros, en una zona de gran biodiversidad e 
-                    impactantes paisajes. 
+                    impactantes paisajes.</span> 
                 </p>
             </div>
             
@@ -118,12 +118,12 @@
                 <div>
                     <h2 class="subtituloCentrado">Alojamiento</h2>
                     <ul class="parrafoCajaNosotros sinPadding sombraP">
-                        <li>Plan de acomodación múltiple, incluye un guía que los acompaña desde el inicio de su estadía y póliza.</li>
-                        <li>Plan Romántico.  Incluye botella de vino, exclusividad de La Casa (la exclusividad de la casa es durante 
-                        la noche, durante el día se comparte la casa con las personas del día de sol que 
-                        vallan a realizar cualquiera de las actividades) un guía y póliza.</li>
-                        <li>Zona de camping: Capacidad para 8 personas. Ubicadas en carpas para 2 personas, la zona cuenta con cocina 
-                        dotada, baño, ducha, chimenea, acceso a la casa durante el día, tarjeta de asistencia.</li>
+                        <li>Plan de acomodación múltiple: incluye un guía que los acompaña desde el inicio de su estadía y póliza.</li>
+                        <li>Plan Romántico: Incluye exclusividad de La Casa, <span class="menosTexto">(la exclusividad de la casa es durante 
+                            la noche, durante el día se comparte la casa con las personas del día de sol que 
+                            vallan a realizar cualquiera de las actividades)</span>  un guía y póliza.</li>
+                        <li>Zona de camping: Capacidad para 8 personas. <span class="menosTexto">Ubicadas en carpas para 2 personas, la zona cuenta con cocina 
+                            dotada, baño, ducha, chimenea, acceso a la casa durante el día, tarjeta de asistencia.</span></li>
                     </ul> 
                 </div>
             </div>
