--- a/contacto.html
+++ b/contacto.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="Css/estilo.css">
 </head>
 
-<body class="body">
+<body class="body sinMargin">
     <header class="header">  
         <div class="header__contenedor">  
             <div class="header__titulo"> 
